<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chipTextColor"
    tools:context=".ui.weatherReport.WeatherReportActivity">

    <RelativeLayout
        android:id="@+id/upperlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/city_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_30_dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/updated_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_field"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/dimen_10_dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btnMarkFav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_45_dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:elevation="@dimen/dimen_2_dp"
            android:gravity="center"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:text="@string/markFav"
            android:textAllCaps="true"
            android:textAppearance="@style/AppTheme"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="24dp"
            tools:targetApi="lollipop" />


        <RelativeLayout

            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_30_dp">

            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginLeft="@dimen/dimen_30_dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/weather_image"
                android:layout_toRightOf="@+id/weather_image"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/textViewWeatherMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTemperature"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewHumidityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewWeatherMain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/humidTxt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewWeatherMain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:layout_toEndOf="@+id/textViewHumidityHeader"
                android:layout_toRightOf="@+id/textViewHumidityHeader"
                android:paddingStart="@dimen/dimen_10_dp"
                android:paddingLeft="@dimen/dimen_10_dp"
                android:textColor="@color/colorHintText"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry"
                tools:text="35°" />


            <TextView
                android:id="@+id/textViewPressureHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewHumidityHeader"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/pressure"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewHumidityHeader"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:layout_toEndOf="@+id/textViewPressureHeader"
                android:layout_toRightOf="@+id/textViewPressureHeader"
                android:paddingStart="@dimen/dimen_10_dp"
                android:paddingLeft="@dimen/dimen_10_dp"
                android:textColor="@color/colorHintText"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry"
                tools:text="35" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_30_dp"
            android:text="@string/place_not_found"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>